--- a/src/components/ItemListContainer/styles.css
+++ b/src/components/ItemListContainer/styles.css
@@ -1,11 +1,4 @@
 
 .contenidoPrincipal {
-    width: 100%;
-    height: 60vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 45px;
-    font-weight: bold;
+    margin: 0 5%;
 }
