--- a/src/components/NavBar/styles.css
+++ b/src/components/NavBar/styles.css
@@ -80,7 +80,7 @@
     position: absolute;
     margin: 60px 0;
     width: 200px;
-    height: 293px;
+    height: 211px;
     box-shadow: 0px 2px 2px gray;
     z-index: 1;
 }
@@ -99,11 +99,21 @@
 }
 
 .menu ul li ul li a{
+    display: block;
     text-decoration: none;
     color: black;
+    width: 100%;
+    height: 100%;
+    transition: all 200ms;
 }
 
 .menu > ul > li:hover > ul > li:hover {
     box-shadow: 0px 0px 6px #ccc inset;
+    background-color: #333;
+    color: white;
+}
+
+.menu > ul > li:hover > ul > li > a:hover {
+    color: white;
 }
 
