--- a/src/components/ItemList/styles.css
+++ b/src/components/ItemList/styles.css
@@ -59,15 +59,20 @@
 .card button {
     margin: 0px 0px;
     border: none;
+}
+
+.card button a {
+    display: block;
     padding: 5px;
     font-size: 16px;
     cursor: pointer;
     font-weight: 500;
+    text-decoration: none;
     color: rgba(0, 0, 0, 0.7);
     transition: all 300ms;
 }
 
-.card button:hover {
+.card button a:hover {
     background-color: brown;
     color: white;
 }
