Se agrego implemento un componente para buscar por titulo, tambien se agrego la interfas grafica de un formulario para filtrar por categoria y precio

--- a/src/components/Loading/styles.css
+++ b/src/components/Loading/styles.css
@@ -1,10 +1,11 @@
 .loadingContainer {
     height: 350px;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
     box-sizing: border-box;
-    background-color: white;
+    background-color: #f5f6f7;
     border-radius: 5px;
 }
 
