--- a/src/pages/ItemDetail/styles.css
+++ b/src/pages/ItemDetail/styles.css
@@ -1,5 +1,4 @@
 
-
 .contenidoGeneral {
     display: flex;
     flex-direction: row;
@@ -92,32 +91,102 @@
     border: none;
 }
 
-.informacionProducto .agregarButton {
-    margin-top: 20px;
-    padding: 10px;
-    width: 100%;
-    border: solid 1px rgb(142, 141, 141);
-    border-radius: 10px;
-    color: rgb(142, 141, 141);
-    font-weight: bold;
-    cursor: pointer;
-    transition: all 500ms;
-}
-
-.informacionProducto .agregarButton:hover {
-    margin-top: 20px;
-    padding: 10px;
-    width: 100%;
-    border: rgb(5, 134, 59);;
-    border-radius: 10px;
-    background-color: rgb(5, 134, 59);
-    color: white;
-    box-shadow: 3px 3px rgba(0,0,0,0.3);
-}
-
 .informacionProducto .agregarButton:active {
     border: black;
     background-color: rgb(3, 125, 54);
     box-shadow: rgba(50, 50, 93, 0.5) 0px 5px 10px -6px inset, 
     rgba(0, 0, 0, 0.5) 0px 18px 36px -18px inset;
+}
+
+.cantidadProducto .valorProducto{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 30px;
+    font-family: sans-serif;
+}
+
+/* MEDIAQUERIS */
+@media (max-width: 1024px) {
+    .contenidoGeneral {
+        width: 80%;
+    }
+}
+
+@media (max-width: 880px) {
+    .informacionProducto .tituloProducto {
+        font-size: 20px;
+    }
+    
+    .informacionProducto .categoriaProducto {
+        font-size: 12px;
+    }
+    
+    
+    .informacionProducto .descripcionProducto {
+        font-size: 15px;
+    
+    }
+}
+
+@media (max-width: 880px) {
+    .contenidoGeneral {
+        width: 90%;
+    }
+}
+
+@media (max-width: 700px) {
+    .contenidoGeneral {
+        width: 100%;
+    }
+
+    .imgProducto img{
+        height: 250px;
+    }
+
+    .informacionProducto .tituloProducto {
+        font-size: 18px;
+    }
+    
+    .informacionProducto .categoriaProducto {
+        font-size: 10px;
+    }
+    
+    
+    .informacionProducto .descripcionProducto {
+        font-size: 14px;
+    }
+}
+
+
+@media (max-width: 545px) {
+    .contenidoGeneral {
+        flex-direction: column;
+        margin: 4% 0;
+        width: 100%;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .imgProducto img{
+        height: 350px;
+    }
+
+    .informacionProducto {
+        width: 70%;
+        margin: 50px 0 0 0;
+    }
+
+    .informacionProducto .tituloProducto {
+        font-size: 25px;
+    }
+    
+    .informacionProducto .categoriaProducto {
+        font-size: 13px;
+    }
+    
+    
+    .informacionProducto .descripcionProducto {
+        font-size: 15px;
+    }
 }
