--- a/src/components/FormFilter/styles.css
+++ b/src/components/FormFilter/styles.css
@@ -16,8 +16,8 @@
     padding: 10px 10px 0 20px;
 }
 
-.tituloCategoria{
-    font-size: 13px;
+.tituloCategoria h3{
+    font-size: 13px !important;
     color: rgba(67, 66, 66, 0.8);
     border-bottom: 1px solid rgba(67, 66, 66, 0.3);
     padding-bottom: 5PX;
@@ -25,6 +25,7 @@
 
 .listaCategorias {
     margin: 10px;
+    padding-left: 0 !important;
 }
 
 .listaCategorias li{
@@ -76,12 +77,12 @@
     height: 30px;
     cursor: pointer;
     color: rgb(142, 141, 141);
-    font-size: 14px;
+    font-size: 12px !important;
     font-weight: bold;
     letter-spacing: 1.5px;
     border: solid 1px rgb(142, 141, 141);
     border-radius: 10px;
-    background-color: rgba(49, 215, 41, 0.5);
+    
     transition: all 500ms;
 }
 
