--- a/src/pages/ItemList/styles.css
+++ b/src/pages/ItemList/styles.css
@@ -4,7 +4,7 @@
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
-.cards {
+.cardsProducts {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -13,7 +13,8 @@
     margin: 35px 0px;
     width: 100%;
 }
-.card {
+
+.cardProducto {
     margin: 15px;
     height: 340px;
     width: 200px;
@@ -25,7 +26,7 @@
     transition: all 300ms;
 }
 
-.card:hover {
+.cardProducto:hover {
     box-shadow: inset 0 -3em 3em rgba(0,0,0,0.1),
     0 0  0 2px rgb(255,255,255),
     0.3em 0.3em 1em rgba(0,0,0,0.5);
@@ -48,16 +49,21 @@
 }
 .cardBody h3{
     font-size: 15px;
+    color: #000;
 }
 
-.cardBody .cardPrice {
+.nav_link{
+    text-decoration:none !important;
+}
+
+.cardPrice {
     font-family: fantasy;
     font-size: 16px;
     font-weight: 500;
     margin-top: 10px;
     color: brown;
     display: flex;
-    flex-direction: column;
+    flex: 1 1 auto;
 }
 
 .separador {
@@ -65,15 +71,24 @@
     border: solid .1px rgba(0,0,0, 0.1);
 }
 
-.card button {
+.cardProducto i {
+    font-size: 16px !important;
+}
+
+button span{
+    font-size: 12px !important;
+}
+
+.botonAgregar {
     margin: 0px 0px;
     border: none;
 }
 
-.card button a {
-    display: block;
+.botonAgregar{
+    position: relative;
+    bottom: -40px;
+    display: none;
     padding: 5px;
-    font-size: 16px;
     cursor: pointer;
     font-weight: 500;
     text-decoration: none;
@@ -81,7 +96,13 @@
     transition: all 300ms;
 }
 
-.card button a:hover {
-    background-color: brown;
+.cardProducto:hover .botonAgregar{
+    display: block;
+    bottom: 0;
+    
+}
+
+.botonAgregar:hover {
+    background-color: rgb(5, 134, 59);
     color: white;
 }
