--- a/src/pages/Checkout/styles.css
+++ b/src/pages/Checkout/styles.css
@@ -13,3 +13,21 @@
     padding-top: 60PX;
     margin-bottom: 50px;
 }
+
+
+
+@media (max-width: 990px) {
+    .cartList {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding: 50px 0 0 0;
+        margin: 0;
+        min-width: 400px;
+    }
+
+    .detallePago {
+        margin: 50px;
+    }
+}
+
