--- a/src/pages/ItemDetail/styles.css
+++ b/src/pages/ItemDetail/styles.css
@@ -62,17 +62,18 @@
 }
 
 .informacionProducto .cantidadProducto {
-    margin-right: 10px;
     display: flex;
-    justify-content: center;
-    align-content: center;
-    border-radius: 3px;
+    height: 35px;
+    margin-right: 10px;
+    border-radius: 5px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
-.informacionProducto .cantidadProducto button{
+.informacionProducto .cantidadProducto Button{
+    display: flex;
+    margin: 0 !important;
     width: 30px;
-    text-align: center;
+    height: 30px;
     border: none;
     font-weight: bold;
     font-size: 18px;
