Proyecto final de React

--- a/src/components/Payment/styles.css
+++ b/src/components/Payment/styles.css
@@ -1,5 +1,18 @@
 .iformacionPago {
-    height: 450px;
+    height: 500px;
+    width: 380px;
+    min-width: 250px;
+    padding: 10px 30px;
+    margin-left: 40px;
+    box-shadow: inset 0 -3em 3em rgba(0,0,0,0.1),
+    0 0  0 2px rgb(255,255,255),
+    0.3em 0.3em 1em rgba(0,0,0,0.5);
+}
+
+.informacionInicioSesion {
+    display: flex;
+    flex-direction: column;
+    height: 140px;
     width: 380px;
     min-width: 250px;
     padding: 10px 30px;
