--- a/src/components/Button/styles.css
+++ b/src/components/Button/styles.css
@@ -10,25 +10,33 @@
     transition: all 500ms;
 }
 
-.button:hover {
+
+.pagoButton:hover {
     margin-top: 20px;
     padding: 10px;
     width: 100%;
     color: white;
     box-shadow: 3px 3px rgba(0,0,0,0.3);
-}
-
-.pagoButton:hover {
     border: rgb(5, 50, 134);
     background-color: rgb(5, 37, 134);
 }
 
 .agregarButton:hover {
+    margin-top: 20px;
+    padding: 10px;
+    width: 100%;
+    color: white;
+    box-shadow: 3px 3px rgba(0,0,0,0.3);
     border: rgb(5, 134, 59);
     background-color: rgb(5, 134, 59);
 }
 
 .tiendaButton:hover {
+    margin-top: 20px;
+    padding: 10px;
+    width: 100%;
+    color: white;
+    box-shadow: 3px 3px rgba(0,0,0,0.3);
     border: rgb(0, 15, 6);
     background-color: rgb(0, 10, 4);
 }
